aaa: redirect to arbitrary URL allows for phishing
This patch validates that redirect url attached during authentication
process always points to legit ovirt engine domain (or alternate one if
defined)

Change-Id: Ie1816593bb941df380f2ab665aa7a109edf893b8
Bug-Url: https://bugzilla.redhat.com/1866688
Signed-off-by: Artur Socha <asocha@redhat.com>